--- a/codeception.yml
+++ b/codeception.yml
@@ -3,13 +3,15 @@ paths:
     tests: tests
     log: tests/_output
     data: tests/_data
-    helpers: tests/_support
+    support: tests/_support
+    envs: tests/_envs
 settings:
     bootstrap: _bootstrap.php
     colors: false
     memory_limit: 1024M
 extensions:
-    enabled: [Startup]
+    enabled:
+        - Codeception\Extension\RunFailed
 modules:
     config:
         Db:
