Tests for upload control, added originalValue into UploadControl

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
   "require-dev": {
     "nette/di": "^2.3",
     "latte/latte": "^2.3",
-    "codeception/codeception": "^2.1"
+    "codeception/codeception": "^2.1",
+    "nette/forms": "2.3",
+    "nette/application": "2.3"
   },
   "autoload": {
     "classmap": ["src/"]
