--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,4 @@ install:
     - composer self-update
     - composer install
 
-script: php vendor/codeception/codeception/codecept run
-
-after_failure:
-  - 'for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done'
+script: vendor/bin/codecept run
