--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ os:
   - linux
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - hhvm
+  - nightly
 
 matrix:
   allow_failures:
     - php: hhvm
+    - php: nightly
 
 install:
     - composer self-update
