--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     }
   ],
   "require": {
+    "php": ">= 5.5",
     "nette/http": "^2.3",
     "nette/utils": "^2.3",
     "nette/finder": "^2.3"
