composer.json deleted extra comma

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 		"codeception/codeception": "^2.1",
 		"nette/forms": "2.3",
 		"nette/application": "2.3",
-		"webchemistry/testing-helpers": "dev-master",
+		"webchemistry/testing-helpers": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
