--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
 		"nette/forms": "^2.4",
 		"nette/application": "^2.4",
 		"webchemistry/testing-helpers": "dev-master",
-		"aws/aws-sdk-php": "^3.31"
+		"aws/aws-sdk-php": "^3.31",
+		"cloudinary/cloudinary_php": "^1.10"
 	},
 	"suggest": {
 		"aws/aws-sdk-php": "To save an image on Amazon",
