--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,15 @@ php:
   - 7.1
   - 7.2
 
+matrix:
+  include:
+  - php: 7.1
+    env: PHPSTAN=1
+
 install:
     - composer self-update
     - composer install
 
-script: vendor/bin/codecept run
+script:
+  - vendor/bin/codecept run
+  - if [ "$PHPSTAN" = "1" ]; then vendor/bin/phpstan analyse src --level=5 --ansi --no-progress; fi
