--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"nette/di": "^2.4",
 		"latte/latte": "^2.4",
 		"codeception/codeception": "^2.4",
+		"phpunit/phpunit": "~5.0 || ~6.0 || ~7.1.0",
 		"nette/forms": "^2.4",
 		"nette/application": "^2.4",
 		"webchemistry/testing-helpers": "dev-master",
