--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,8 @@
 		"psr-4": {
 			"Test\\": ["tests/classes/"]
 		}
+	},
+	"scripts": {
+		"phpstan": "vendor/bin/phpstan analyse src --level=6 -c phpstan.neon --ansi --no-progress"
 	}
 }
