--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,11 @@
 		"nette/forms": "^2.4",
 		"nette/application": "^2.4",
 		"webchemistry/testing-helpers": "dev-master",
-		"aws/aws-sdk-php": "^3.31",
-		"cloudinary/cloudinary_php": "^1.10",
 		"kdyby/doctrine": "^3.3",
 		"phpstan/phpstan": "^0.10.0"
 	},
 	"suggest": {
-		"aws/aws-sdk-php": "To save an image on Amazon",
-		"cloudinary/cloudinary_php": "To save an image on Cloudinary"
+		"webchemistry/images-s3": "To save an image on Amazon"
 	},
 	"autoload": {
 		"psr-4": {
