--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,4 @@ parameters:
 		- '#Access to an undefined property WebChemistry\\Images\\Resources\\IResource::\$__meta#'
 		- '#Property WebChemistry\\Images\\Resources\\Meta\\ResourceMeta::\$hashFolder \(string|null\) does not accept default value of type false#'
 		- '#Strict comparison using === between string|null and false will always evaluate to false#'
+		- '#Call to an undefined method Nette\\Utils\\Image\:\:setQuality\(\)#'
