--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
 		"php": ">= 7.1",
 		"nette/http": "^2.4",
 		"nette/utils": "^2.4",
-		"nette/finder": "^2.4",
-		"nette/tokenizer": "^2.2"
+		"nette/finder": "^2.4"
 	},
 	"require-dev": {
 		"nette/di": "^2.4",
