--- a/composer.json
+++ b/composer.json
@@ -10,21 +10,22 @@
 		"storage"
 	],
 	"require": {
-		"php": ">= 7.1",
-		"nette/http": "^2.4",
-		"nette/utils": "^2.4",
-		"nette/finder": "^2.4"
+		"php": "^7.1",
+		"nette/http": "^3.0",
+		"nette/utils": "^3.0",
+		"tracy/tracy": "^2.6",
+		"nette/finder": "^2.5"
 	},
 	"require-dev": {
-		"nette/di": "^2.4",
-		"latte/latte": "^2.4",
+		"nette/di": "^3.0-RC3",
+		"latte/latte": "^2.5",
 		"codeception/codeception": "^2.4",
 		"phpunit/phpunit": "~5.0 || ~6.0 || ~7.1.0",
-		"nette/forms": "^2.4",
-		"nette/application": "^2.4",
+		"nette/forms": "^3.0",
+		"nette/application": "^3.0-RC2",
 		"webchemistry/testing-helpers": "dev-master",
-		"kdyby/doctrine": "^3.3",
-		"phpstan/phpstan": "^0.10.0",
+		"doctrine/orm": "^2.6",
+		"phpstan/phpstan": "^0.11",
 		"webchemistry/doctrine-hydration": "dev-master"
 	},
 	"suggest": {
