--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,10 @@
 	},
 	"scripts": {
 		"phpstan": "vendor/bin/phpstan analyse src --level=6 -c phpstan.neon --ansi --no-progress"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "5.0-dev"
+		}
 	}
 }
