--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,8 @@
 		"phpstan": "vendor/bin/phpstan analyse src --level=6 -c phpstan.neon --ansi --no-progress"
 	},
 	"extra": {
-		"branch-alias": "4.1-dev"
+		"branch-alias": {
+			"dev-master": "4.1-dev"
+		}
 	}
 }
