--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"storage"
 	],
 	"require": {
-		"php": "^7.2",
+		"php": "^8.0",
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
 		"tracy/tracy": "^2.6",
@@ -19,13 +19,15 @@
 	"require-dev": {
 		"nette/di": "^3.0",
 		"latte/latte": "^2.5",
-		"codeception/codeception": "^2.4",
+		"codeception/codeception": "^4.1",
 		"nette/forms": "^3.0",
 		"nette/application": "^3.0",
-		"webchemistry/testing-helpers": "~2.0",
+		"webchemistry/testing-helpers": "~3.0.0",
 		"doctrine/orm": "^2.6",
-		"phpstan/phpstan": "^0.11",
-		"nettrine/hydrator": "dev-master"
+		"phpstan/phpstan": "^0.12",
+		"nettrine/hydrator": "dev-master",
+		"codeception/module-phpbrowser": "^1.0",
+		"codeception/module-asserts": "^1.3"
 	},
 	"suggest": {
 		"webchemistry/images-s3": "To save an image on Amazon"
